<?xml version="1.0"?>
<package format="2">
  <name>gaze_scene_intersection</name>
  <version>0.0.1</version>
  <description>The gaze_scene_intersection package</description>

  <maintainer email="a.al-hindawi@imperial.ac.uk">Ahmed Al-Hindawi</maintainer>

  <license>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>

  <depend>python-opencv</depend>
  <depend>python-dlib</depend>
  <depend>python-scipy</depend>
  <depend>python-numpy</depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
